# ragChatbot

./: CLAUDE.md  check.sh  format.sh  lint.sh  pyproject.toml  pyproject.toml.bak  queryProcessingFlow.md  requirements-minimal.txt  requirements.txt  run_simple.sh  uv.lock.bak
.claude/commands/: implement-feature.md
backend/: ai_generator.py  app.py  models.py  search_tools.py  session_manager.py  simple_app.py
backend/tests/: README.md  conftest.py  test_api_endpoints.py
frontend/: index.html  script.js  style.css
