[project]
name = "simple-rag-chatbot"
version = "0.1.0"
description = "Simple RAG chatbot without ML dependencies"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "anthropic==0.58.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "httpx==0.28.1",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "api: API endpoint tests",
]